fix overflow de dados no dashboard

--- a/src/pages/Main/style.scss
+++ b/src/pages/Main/style.scss
@@ -6,10 +6,11 @@
 
 .dashboard-layout {
   display: flex;
-  height: 100vh;
+  height: 1200px;
 }
 
 .main-content {
+
   flex: 1;
   padding: 20px;
   background-color: #f5f5f5;
@@ -17,7 +18,7 @@
 
 .sidebar {
   width: 16vw;
-
+  height: 100%;
   background-color: #333;
   color: white;
   padding: 30px;
@@ -99,7 +100,7 @@
     }
 
     .placeholder {
-      height: 400px;
+      height: 420px;
       display: flex;
       align-items: center;
       flex-direction: column;
@@ -110,6 +111,8 @@
       justify-content: flex-start;
       margin-top: 5%;
       margin-bottom: -5%;
+      width: 100%;
+      overflow-y: auto;
 
       .card-left {
         border: #333 2px solid;
